fix: restaurar CORS wildcard y manejar 405 correctamente
- SecurityConfig: volver a allowedOriginPatterns("*") para no romper el
  frontend en Vercel cuando CORS_ALLOWED_ORIGIN no está configurado
- GlobalExceptionHandler: agregar handler específico para
  HttpRequestMethodNotSupportedException que devuelve 405 en vez de 500

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>